tests/tooling/fixtures/native/recovery/negative/negative_extern_missing_fn_keyword.objc3
// Negative fixture: extern declarations require the `fn` keyword.
// Expected diagnostic code(s): O3P100.
module NegativeExternMissingFnKeyword;

extern let value = 1;

fn main() -> i32 {
  return value;
}
